--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
            
           </div>
           <div class="project-img">
-            <img src="./img/p2.jpg" alt="img">
+            <img src="./img/img5.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -137,7 +137,9 @@
         </div><br><br>
         <p style="font-size: 50px;">ของขวัญนี้นะ </p>
         <br> 
-        <h1>เดียวตรงนี้จะเอารูปเค้กมาให้นะ</h1> 
+        <div class="project-img">
+          <img src="./img/img10.jpg" alt="img">
+        </div>
         <br><br>
         <h1>เพลงที่อยากให้ เพลงรักเพลงแรก</h1> 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/N9bashij_7c?si=Vsi_Zb9QMFPZWP85&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
